# agent-bounty-scout

./: .gitignore  CLAUDE.md  HACKATHON.md  PITCH.md  README.md  docker-compose.yml  package.json
coral-agents/: README.md
coral-agents/buyer-agent/: Dockerfile  README.md  coral-agent.toml  package.json
coral-agents/buyer-agent/src/: arbiter.ts  buyer.test.ts  escrow.guard.test.ts  escrow.ts  goal.ts  guard.ts  index.ts  llm_buyer.ts  wallet.ts
coral-agents/seller-agent/: Dockerfile  README.md  coral-agent.toml  package.json  tsconfig.json
coral-agents/seller-agent/src/: bidder.test.ts  bidder.ts  bounty.ts  escrow.guard.test.ts  escrow.ts  index.ts  payment.test.ts  payment.ts  replay.test.ts  replay.ts  service.test.ts  service.ts
coral-agents/seller-worldcup/: coral-agent.toml
docs/: DEMO-CORAL.md  DEMO-PROOF.json  DEMO-PROOF.md  DEMO-VIDEO-SCRIPT.md  DEMO-WALKTHROUGH.md
examples/: README.md
examples/txodds/: README.md  WORLDCUP_API.md  package.json  tsconfig.json
examples/txodds/agent/: arbiter.ts  arbiter_idl.json  bounty.ts  edge.test.ts  edge.ts  (+3 more)
examples/txodds/escrow/: Anchor.toml  Cargo.toml  README.md  contract_extension.md  package.json  tsconfig.json
examples/txodds/escrow/client/: escrow.ts
examples/txodds/escrow/programs/arbiter/: Cargo.toml
examples/txodds/escrow/programs/arbiter/src/: lib.rs
examples/txodds/escrow/programs/escrow/: Cargo.toml
examples/txodds/escrow/programs/escrow/src/: lib.rs
examples/txodds/escrow/tests/: escrow.ts
scripts/: README.md  fund-buyer.mjs  fund-seller.mjs  package.json  setup.js  txodds.js
(+11 files in other folders)
